policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-internal-only
  namespace: tech-demo

spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress
