policies/gatekeeper-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels

metadata:
  name: require-owner-label

spec:
  enforcementAction: deny

  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]

  parameters:
    labels:
      - key: owner
